force-app/main/default/objects/Case/fields/New_Class__c.field-meta.xml
<CustomField>
    <fullName>New_Class__c</fullName>
    <label>New Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agricultural Production</fullName>
            </value>
            <value>
                <fullName>Agricultural Svcs</fullName>
            </value>
            <value>
                <fullName>Airlines</fullName>
            </value>
            <value>
                <fullName>Airports &amp; Aviation Svcs</fullName>
            </value>
            <value>
                <fullName>Asphalt, Terminal</fullName>
            </value>
            <value>
                <fullName>Auto Maintenance</fullName>
            </value>
            <value>
                <fullName>Auto Retail</fullName>
            </value>
            <value>
                <fullName>Banks, Financial Institutions &amp; Bus Svcs</fullName>
            </value>
            <value>
                <fullName>Biotechnology</fullName>
            </value>
            <value>
                <fullName>Brokers - Waste &amp; Environmental Svcs</fullName>
            </value>
            <value>
                <fullName>Building Materials (excl Lumber Mills)</fullName>
            </value>
            <value>
                <fullName>Chemical - Distributor</fullName>
            </value>
            <value>
                <fullName>Chemical Manufacturing</fullName>
            </value>
            <value>
                <fullName>Colleges &amp; Universities</fullName>
            </value>
            <value>
                <fullName>Construction, Gen Contractors &amp; Builders</fullName>
            </value>
            <value>
                <fullName>Corporate Real Estate</fullName>
            </value>
            <value>
                <fullName>Cruise Lines</fullName>
            </value>
            <value>
                <fullName>Dealerships - Auto</fullName>
            </value>
            <value>
                <fullName>Dealerships - Recreational &amp; Machinery</fullName>
            </value>
            <value>
                <fullName>Drill Rig Owners</fullName>
            </value>
            <value>
                <fullName>Dry Cleaners</fullName>
            </value>
            <value>
                <fullName>Emergency Response Management</fullName>
            </value>
            <value>
                <fullName>Eng &amp; Consult - Civil/Heavy Construction</fullName>
            </value>
            <value>
                <fullName>Eng &amp; Consult - Drilling</fullName>
            </value>
            <value>
                <fullName>Eng &amp; Consult - Enviro Remediation</fullName>
            </value>
            <value>
                <fullName>Eng &amp; Consult - Oilsands</fullName>
            </value>
            <value>
                <fullName>Eng &amp; Consult - Seismic &amp; Production</fullName>
            </value>
            <value>
                <fullName>Eng &amp; Consult - Utilities</fullName>
            </value>
            <value>
                <fullName>Exploration - Drilling</fullName>
            </value>
            <value>
                <fullName>Exploration - Seismic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>