force-app/main/default/objects/Case/fields/New_Corp_Account__c.field-meta.xml
<CustomField>
    <fullName>New_Corp_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Corp Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (New Corp Account)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>