force-app/main/default/objects/Case/fields/New_Corporate_Address__c.field-meta.xml
<CustomField>
    <fullName>New_Corporate_Address__c</fullName>
    <label>New Corporate Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>