force-app/main/default/objects/Case/fields/New_EPA_ID__c.field-meta.xml
<CustomField>
    <fullName>New_EPA_ID__c</fullName>
    <label>New EPA ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>