force-app/main/default/objects/Case/fields/New_Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Expired_Date__c</fullName>
    <description>New Expired Date</description>
    <label>New Expired Date</label>
    <type>DateTime</type>
</CustomField>