force-app/main/default/objects/Case/fields/New_GenReg_Id__c.field-meta.xml
<CustomField>
    <fullName>New_GenReg_Id__c</fullName>
    <label>New GenReg Id</label>
    <type>TextArea</type>
</CustomField>