force-app/main/default/objects/Case/fields/New_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>New_Lost_Reason__c</fullName>
    <description>New Lost Reason</description>
    <label>New Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Company Bought Out</fullName>
            </value>
            <value>
                <fullName>Deduped</fullName>
            </value>
            <value>
                <fullName>Duplicate Name</fullName>
            </value>
            <value>
                <fullName>Home Owner</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Location Closed</fullName>
            </value>
            <value>
                <fullName>One Time FS Event</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Poor Payment History</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>