force-app/main/default/objects/Case/fields/New_SIC__c.field-meta.xml
<CustomField>
    <fullName>New_SIC__c</fullName>
    <label>New SIC</label>
    <type>TextArea</type>
</CustomField>