force-app/main/default/objects/Case/fields/New_State_EPA_ID__c.field-meta.xml
<CustomField>
    <fullName>New_State_EPA_ID__c</fullName>
    <label>New State EPA ID</label>
    <type>TextArea</type>
</CustomField>