force-app/main/default/objects/Case/fields/New_Territory_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Territory_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who will own the new territory</description>
    <label>New Territory Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases15</relationshipName>
    <type>Lookup</type>
</CustomField>