force-app/main/default/objects/Case/fields/No_Asset_Association_Services__c.field-meta.xml
<CustomField>
    <fullName>No_Asset_Association_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for the MDM team to validate the Account Inactivate process</description>
    <label>No Asset/Association Services</label>
    <type>Checkbox</type>
</CustomField>