force-app/main/default/objects/Case/fields/No_Co_links_Active__c.field-meta.xml
<CustomField>
    <fullName>No_Co_links_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for the MDM team to validate the Account Inactivate process</description>
    <label>No Co-links Active</label>
    <type>Checkbox</type>
</CustomField>