force-app/main/default/objects/Case/fields/No_Invoice_Orders_in_Account_Details__c.field-meta.xml
<CustomField>
    <fullName>No_Invoice_Orders_in_Account_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for the MDM team to validate the Account Inactivate process</description>
    <label>No Invoice Orders in Account Details</label>
    <type>Checkbox</type>
</CustomField>