force-app/main/default/objects/Case/fields/No_Open_Order_in_Order_Management_OM__c.field-meta.xml
<CustomField>
    <fullName>No_Open_Order_in_Order_Management_OM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for the MDM team to validate the Account Inactivate process</description>
    <label>No Open Order in Order Management (OM)</label>
    <type>Checkbox</type>
</CustomField>