force-app/main/default/objects/Case/fields/No_Service_Master_listing__c.field-meta.xml
<CustomField>
    <fullName>No_Service_Master_listing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for the MDM team to validate the Account Inactivate process</description>
    <label>No Service Master listing</label>
    <type>Checkbox</type>
</CustomField>