force-app/main/default/objects/Case/fields/Number_hours_since_last_modified__c.field-meta.xml
<CustomField>
    <fullName>Number_hours_since_last_modified__c</fullName>
    <formula>TEXT(
ROUND(MOD((Now() - LastModifiedDate)*24,24),0)
         )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number hours since last modified</label>
    <type>Text</type>
</CustomField>