force-app/main/default/objects/Case/fields/Offers__c.field-meta.xml
<CustomField>
    <fullName>Offers__c</fullName>
    <description>It shows the Offers that you have given the Customer in an attempt to retain the Parts Washer.</description>
    <inlineHelpText>Please select the Offers that you have given the Customer in an attempt to retain the Parts Washer.</inlineHelpText>
    <label>Offers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start $25, $50, $75, $100 (up to $100 max)</fullName>
            </value>
            <value>
                <fullName>-30% off list today and 10% for long term agreement</fullName>
            </value>
            <value>
                <fullName>One time 50% off service</fullName>
            </value>
            <value>
                <fullName>One free service</fullName>
            </value>
            <value>
                <fullName>Discounted rates for service terms &lt;24 weeks</fullName>
            </value>
            <value>
                <fullName>Free equipment upgrade with no installation charge</fullName>
            </value>
            <value>
                <fullName>Free loaner while equipment being repaired</fullName>
            </value>
            <value>
                <fullName>Sell Machine for 2 year Coms agreement</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>