force-app/main/default/objects/Case/fields/OFR_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>OFR_Reason_Code__c</fullName>
    <label>OFR Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Type_of_Service__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Already on Route</fullName>
            </value>
            <value>
                <fullName>Business Closing</fullName>
            </value>
            <value>
                <fullName>Cut Off Acct</fullName>
            </value>
            <value>
                <fullName>Leaking Bin</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Moving to New Location</fullName>
            </value>
            <value>
                <fullName>No bin on account</fullName>
            </value>
            <value>
                <fullName>Not a Call in/Called for different service</fullName>
            </value>
            <value>
                <fullName>Unexpected Volume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>