force-app/main/default/objects/Case/fields/Old_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Old_Account_Name__c</fullName>
    <label>Old Account Name</label>
    <type>TextArea</type>
</CustomField>