force-app/main/default/objects/Case/fields/Old_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Old_Billing_City__c</fullName>
    <label>Old Billing City</label>
    <type>TextArea</type>
</CustomField>