force-app/main/default/objects/Case/fields/Old_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Old_Billing_Country__c</fullName>
    <label>Old Billing Country</label>
    <type>TextArea</type>
</CustomField>