force-app/main/default/objects/Case/fields/Old_Billing_Expired__c.field-meta.xml
<CustomField>
    <fullName>Old_Billing_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old Billing Expired</label>
    <type>Checkbox</type>
</CustomField>