force-app/main/default/objects/Case/fields/Old_Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Old_Billing_Postal_Code__c</fullName>
    <label>Old Billing Postal Code</label>
    <type>TextArea</type>
</CustomField>