force-app/main/default/objects/Case/fields/Old_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Old_Billing_State__c</fullName>
    <label>Old Billing State</label>
    <type>TextArea</type>
</CustomField>