force-app/main/default/objects/Case/fields/Old_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Old_Billing_Street__c</fullName>
    <label>Old Billing Street</label>
    <type>TextArea</type>
</CustomField>