force-app/main/default/objects/Case/fields/Old_Chain_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Old_Chain_Code_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Chain Code Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Old Chain Code Name)</relationshipLabel>
    <relationshipName>Cases2_del</relationshipName>
    <type>Lookup</type>
</CustomField>