force-app/main/default/objects/Case/fields/Old_Class__c.field-meta.xml
<CustomField>
    <fullName>Old_Class__c</fullName>
    <label>Old Class</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>