force-app/main/default/objects/Case/fields/Old_Corp_Account__c.field-meta.xml
<CustomField>
    <fullName>Old_Corp_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Corp Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Old Corp Account)</relationshipLabel>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>