force-app/main/default/objects/Case/fields/Old_Corporate_Address__c.field-meta.xml
<CustomField>
    <fullName>Old_Corporate_Address__c</fullName>
    <label>Old Corporate Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>