force-app/main/default/objects/Case/fields/Old_Corporate_City__c.field-meta.xml
<CustomField>
    <fullName>Old_Corporate_City__c</fullName>
    <label>Old Corporate City</label>
    <type>TextArea</type>
</CustomField>