force-app/main/default/objects/Case/fields/Old_Corporate_Country__c.field-meta.xml
<CustomField>
    <fullName>Old_Corporate_Country__c</fullName>
    <label>Old Corporate Country</label>
    <type>TextArea</type>
</CustomField>