force-app/main/default/objects/Case/fields/Old_Corporate_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Old_Corporate_Postal_Code__c</fullName>
    <label>Old Corporate Postal Code</label>
    <type>TextArea</type>
</CustomField>