force-app/main/default/objects/Case/fields/Old_Corporate_State__c.field-meta.xml
<CustomField>
    <fullName>Old_Corporate_State__c</fullName>
    <label>Old Corporate State</label>
    <type>TextArea</type>
</CustomField>