force-app/main/default/objects/Case/fields/Old_Corporate_Street__c.field-meta.xml
<CustomField>
    <fullName>Old_Corporate_Street__c</fullName>
    <label>Old Corporate Street</label>
    <type>TextArea</type>
</CustomField>