force-app/main/default/objects/Case/fields/Old_Division_Name__c.field-meta.xml
<CustomField>
    <fullName>Old_Division_Name__c</fullName>
    <label>Old Division Name</label>
    <type>TextArea</type>
</CustomField>