force-app/main/default/objects/Case/fields/Old_EPA_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_EPA_ID__c</fullName>
    <label>Old EPA ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>