force-app/main/default/objects/Case/fields/Old_Expired__c.field-meta.xml
<CustomField>
    <fullName>Old_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old Expired</label>
    <type>Checkbox</type>
</CustomField>