force-app/main/default/objects/Case/fields/Old_Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Expired_Date__c</fullName>
    <description>Old Expired Date</description>
    <label>Old Expired Date</label>
    <type>DateTime</type>
</CustomField>