force-app/main/default/objects/Case/fields/Old_GenReg_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_GenReg_Id__c</fullName>
    <label>Old GenReg Id</label>
    <type>TextArea</type>
</CustomField>