force-app/main/default/objects/Case/fields/Old_Insite__c.field-meta.xml
<CustomField>
    <fullName>Old_Insite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old Insite</label>
    <type>Checkbox</type>
</CustomField>