force-app/main/default/objects/Case/fields/Old_Manifest_City__c.field-meta.xml
<CustomField>
    <fullName>Old_Manifest_City__c</fullName>
    <label>Old Manifest City</label>
    <type>TextArea</type>
</CustomField>