force-app/main/default/objects/Case/fields/Old_Manifest_Country__c.field-meta.xml
<CustomField>
    <fullName>Old_Manifest_Country__c</fullName>
    <label>Old Manifest Country</label>
    <type>TextArea</type>
</CustomField>