force-app/main/default/objects/Case/fields/Old_Manifest_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Old_Manifest_Postal_Code__c</fullName>
    <label>Old Manifest Postal Code</label>
    <type>TextArea</type>
</CustomField>