force-app/main/default/objects/Case/fields/Old_Manifest_State__c.field-meta.xml
<CustomField>
    <fullName>Old_Manifest_State__c</fullName>
    <label>Old Manifest State</label>
    <type>TextArea</type>
</CustomField>