force-app/main/default/objects/Case/fields/Old_Manifest_Street1__c.field-meta.xml
<CustomField>
    <fullName>Old_Manifest_Street1__c</fullName>
    <label>Old Manifest Street1</label>
    <type>TextArea</type>
</CustomField>