force-app/main/default/objects/Case/fields/Old_Manifest_Street2__c.field-meta.xml
<CustomField>
    <fullName>Old_Manifest_Street2__c</fullName>
    <label>Old Manifest Street2</label>
    <type>TextArea</type>
</CustomField>