force-app/main/default/objects/Case/fields/Old_SIC__c.field-meta.xml
<CustomField>
    <fullName>Old_SIC__c</fullName>
    <label>Old SIC</label>
    <type>TextArea</type>
</CustomField>