force-app/main/default/objects/Case/fields/Old_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Site_Id__c</fullName>
    <label>Old Site Id</label>
    <type>TextArea</type>
</CustomField>