force-app/main/default/objects/Case/fields/Old_State_EPA_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_State_EPA_ID__c</fullName>
    <label>Old State EPA ID</label>
    <type>TextArea</type>
</CustomField>