force-app/main/default/objects/Case/fields/Old_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Old_Vertical__c</fullName>
    <label>Old Vertical</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>