force-app/main/default/objects/Case/fields/Old_Waste_Oil__c.field-meta.xml
<CustomField>
    <fullName>Old_Waste_Oil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old Waste Oil</label>
    <type>Checkbox</type>
</CustomField>