force-app/main/default/objects/Case/fields/OPRID__c.field-meta.xml
<CustomField>
    <fullName>OPRID__c</fullName>
    <label>Added By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>