force-app/main/default/objects/Case/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>This fields is the second step in the case routing logic that will be evaluated after &quot;purchase order timing&quot;.</description>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aurora</fullName>
            </value>
            <value>
                <fullName>Win</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>