force-app/main/default/objects/Case/fields/Overdue_Balance__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Balance__c</fullName>
    <label>Overdue Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>