force-app/main/default/objects/Case/fields/Owner_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Owner_Identifier__c</fullName>
    <formula>if(  LEFT(OwnerId , 3) = &apos;005&apos;,&apos;User&apos;, &apos;Queue&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Identifier</label>
    <type>Text</type>
</CustomField>