force-app/main/default/objects/Case/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <description>This field shows the related account&apos;s Parent Account Name</description>
    <formula>Account.Parent.Name</formula>
    <label>Parent Account</label>
    <type>Text</type>
</CustomField>