force-app/main/default/objects/Case/fields/Parent_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Status__c</fullName>
    <formula>Account.Parent.Account_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Status</label>
    <type>Text</type>
</CustomField>