force-app/main/default/objects/Case/fields/Parent_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Type__c</fullName>
    <formula>text( Account.Parent.Type )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Type</label>
    <type>Text</type>
</CustomField>