force-app/main/default/objects/Case/fields/Parent_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case_Status__c</fullName>
    <description>This field shows the Parent case status.</description>
    <formula>text(Parent.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Case Status</label>
    <type>Text</type>
</CustomField>