force-app/main/default/objects/Case/fields/PO_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Activation_Date__c</fullName>
    <label>PO Activation Date</label>
    <type>DateTime</type>
</CustomField>