force-app/main/default/objects/Case/fields/PO_Case_Auto_Create__c.field-meta.xml
<CustomField>
    <fullName>PO_Case_Auto_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Case Auto Create</label>
    <type>Checkbox</type>
</CustomField>