force-app/main/default/objects/Case/fields/PO_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>PO_Case_Reason__c</fullName>
    <label>PO Case Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>