force-app/main/default/objects/Case/fields/PO_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Expiration_Date__c</fullName>
    <label>PO Expiration Date</label>
    <type>DateTime</type>
</CustomField>