force-app/main/default/objects/Case/fields/PO_Notify_Email__c.field-meta.xml
<CustomField>
    <fullName>PO_Notify_Email__c</fullName>
    <label>PO Notify Email</label>
    <type>Email</type>
</CustomField>