force-app/main/default/objects/Case/fields/PO_Reason__c.field-meta.xml
<CustomField>
    <fullName>PO_Reason__c</fullName>
    <formula>IF( (PO_Case_Reason__c  = &apos;PO - Low balance&apos; || PO_Case_Reason__c  = &apos;&apos; || PO_Case_Reason__c  = &apos;Low Balance&apos; || PO_Case_Reason__c  = &apos;PO  - Low balance&apos;),&apos;Low Balance&apos;,
IF((PO_Case_Reason__c  = &apos;Expiring&apos; || PO_Case_Reason__c  = &apos;Expiring PO&apos;) , &apos;Expiring&apos;,
IF((PO_Case_Reason__c  = &apos;Low Balance /Expiring&apos; ||PO_Case_Reason__c  = &apos;PO - Low balance /Expiring PO&apos; || PO_Case_Reason__c  = &apos;PO  - Low balance /Expiring PO&apos;) , &apos;Low Balance /Expiring&apos;,
IF((PO_Case_Reason__c  = &apos;Negative Balance&apos;) , &apos;Negative Balance&apos;,
PO_Case_Reason__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Reason</label>
    <type>Text</type>
</CustomField>